--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -29,7 +29,7 @@
         width: 531px;
         height: 100px;
         display: block;
-        background: url( "../img/img-auscope-banner.gif" ) no-repeat top left;
+        background: url( "../img/vgml-banner.png" ) no-repeat top left;
     }
 
     #logo h1 a span {
